<resources>
    <string name="app_name">Exedra Communication</string>
    <string name="fb_app_id">1095871787267452</string>
    <string name="account_kit_client_token">b44476ad2795b7a07c8b44c4af633f0c</string>
    <string name="ak_login_protocol_scheme">akb44476ad2795b7a07c8b44c4af633f0c</string>

    <string name="textgiris">Lütfen kullanım amacınızı seçiniz:</string>
    <string name="bireysel">Bireysel</string>
    <string name="kurumsal">Kurumsal</string>
    <string name="nav_sohbet">Sohbetler</string>
    <string name="nav_kisiler">Kişiler</string>
    <string name="nav_etkinlik">Etkinlik</string>
    <string name="nav_profil">Profil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_denme">denme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
