<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/sohbetlerid"
        android:icon="@drawable/baseline_chat_black_24dp"
        android:title="@string/nav_sohbet" />
    <item
        android:id="@+id/kisilerid"
        android:icon="@drawable/baseline_supervisor_account_black_24dp"
        android:title="@string/nav_kisiler" />
    <item
        android:id="@+id/etkinlikid"
        android:icon="@drawable/baseline_event_note_black_24dp"
        android:title="@string/nav_etkinlik" />
    <item
        android:id="@+id/profilid"
        android:icon="@drawable/baseline_account_circle_black_24dp"
        android:title="@string/nav_profil" />
</menu>