<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:weightSum="4"
      android:orientation="vertical">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:src="@mipmap/logo" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="12dp"
          android:text="@string/textgiris"
          android:textColor="@android:color/holo_blue_dark"
          android:textSize="@android:dimen/app_icon_size"
          android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3">

      <Button
          android:onClick="gecis"
          android:id="@+id/bireysel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/bireysel"
          android:textAllCaps="false"
          android:textSize="20sp" />

      <Button

          android:id="@+id/kurumsal"
          android:onClick="gecis"
          android:layout_width="wrap_content"

          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/kurumsal"
          android:textAllCaps="false"
          android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/btnhspvar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Hesabım Var"

          />
    </LinearLayout>
  </LinearLayout>
</ScrollView>